create image containers via js

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-	<div class="background-image">
-		<img src="" />
-	</div>
-	<h1>Hello!</h1>
+	<!-- <h1>Hello!</h1> -->
 </body>
 
 </html>
