add copy to homepage

--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Imelda Loei</title>
+	<title>Imelda Loei : Technical Program Manager, UX Designer, Front-end Developer in Seattle, WA</title>
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 	<script src="//code.jquery.com/jquery-latest.min.js"></script>
 	<script src="scripts/global.js"></script>
 </head>
 
 <body>
-	<!-- <h1>Hello!</h1> -->
+	<div class="text-container">
+		<h1>Imelda Loei</h1>
+		<ul>
+			<li><a target="_blank" href="https://www.linkedin.com/in/imeldaloei">LinkedIn</a></li>
+			<li><a target="_blank" href="https://www.github.com/imeldaloei ">Github</a></li>
+			<li><a target="_blank" href="https://www.instagram.com/lookinontheupside">Instagram</a></li>
+			<li><a target="_blank" href="mailto:imeldaloei@gmail.com">Email</a></li>
+		</ul>
+	</div>
 </body>
 
 </html>
